<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/patientFoundTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_activity_patient_found"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/patientFoundImage"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:contentDescription="@string/patient_image_desc"
            android:src="@drawable/noimagefound"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/patientFoundImage"
            android:layout_centerHorizontal="true"
            android:paddingTop="7dp"
            android:text="@string/correct_patient_question"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22sp" />

        <Button
            android:id="@+id/patientFoundConfirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/patientFoundDenyButton"
            android:layout_alignBottom="@+id/patientFoundDenyButton"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/positive_button"
            android:textSize="25sp" />

        <Button
            android:id="@+id/patientFoundDenyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="26dp"
            android:text="@string/negative_button"
            android:textSize="25sp" />

        <ProgressBar
            android:id="@+id/patientImageProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:minHeight="90dp"
            android:minWidth="90dp" />

    </RelativeLayout>

</LinearLayout>
