<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProviderLoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666666"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/providerLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_activity_provider_login"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#CEEBEC"
            android:textSize="52sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/fingerprintLogo1"
                android:layout_width="fill_parent"
                android:layout_height="730dp"
                android:contentDescription="@string/fingerprint_logo_desc"
                android:maxHeight="20dp"
                android:maxWidth="20dp"
                android:paddingBottom="50dp"
                android:paddingTop="50dp"
                android:scaleType="centerInside"
                android:src="@drawable/fingerprint" />

            <TextView
                android:id="@+id/providerLoginInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:gravity="center"
                android:text="@string/clinician_login_note"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="35sp" />
        </LinearLayout>

        <Button
            android:id="@+id/providerLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="57dp"
            android:text="@string/login_button_provider_login"
            android:textSize="55sp" />

    </RelativeLayout>

</LinearLayout>