<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666666"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_dose_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#CEEBEC"
            android:textSize="70sp" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="#ACC9CA" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/tooEarlyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="114dp"
            android:gravity="center"
            android:text="@string/wrong_date_desc"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="55sp" />

        <Button
            android:id="@+id/tooEarlyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="167dp"
            android:padding="25dp"
            android:text="@string/series_done"
            android:textSize="60sp" />

    </RelativeLayout>

</LinearLayout>